--- a/spring-petclinic-config-server/Jenkinsfile
+++ b/spring-petclinic-config-server/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
    stages {
       stage('Hello') {
          steps {
-           echo "Test"
+           sh 'mvn clean package'
          }
       }
    }
