--- a/spring-petclinic-config-server/Jenkinsfile
+++ b/spring-petclinic-config-server/Jenkinsfile
@@ -3,8 +3,13 @@ pipeline {
    stages {
       stage('Hello') {
          steps {
-           sh 'mvn clean package'
-         }
+          sh label: '', 
+           script: 
+           '''
+           cd spring-petclinic-config-server
+           mvn clean package
+           '''
+         } 
       }
    }
 }
