--- a/spring-petclinic-config-server/Jenkinsfile
+++ b/spring-petclinic-config-server/Jenkinsfile
@@ -1,3 +1,4 @@
+
 pipeline {
    agent any
    stages {
@@ -6,14 +7,10 @@ pipeline {
           sh label: '', 
            script: 
            '''
-           echo "hello"
-           mvn clean package
-           '''
            cd spring-petclinic-config-server/
-           sudo cp -r target/ /var/lib/jenkins/aditya
+           sudo cp -r target /var/lib/jenkins/aditya
            '''
          } 
       }
    }
 }
-
