--- a/spring-petclinic-config-server/Jenkinsfile
+++ b/spring-petclinic-config-server/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
            script: 
            '''
            cd spring-petclinic-config-server/
-           sudo cp -r target /var/lib/jenkins/aditya
+           sudo cp -r src /var/lib/jenkins/aditya
            cd ..
            sudo rm -rf *
            '''
