--- a/spring-petclinic-config-server/Jenkinsfile
+++ b/spring-petclinic-config-server/Jenkinsfile
@@ -39,7 +39,7 @@ pipeline {
            cd /var/lib/jenkins/workspace/pet-clinic-config-service
            git add .
            git commit -m "added"
-           git push origin master
+           git push origin
            '''
          } 
       }
